<?xml version="1.0"?>
<package>
    <name>pcl</name>
    <version>1.9.1</version>
    <description>The pcl package</description>
    <maintainer email="kaijin.ji@tusimple.ai">Kaijin Ji</maintainer>
    <license>BSD</license>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Additional Configurations -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>


</package>
